# quri-vm

./: .gitignore  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: doc.yml
docs/: Makefile  conf.py  index.rst  reference.rst
quri_vm/: vm.py  vm_backend.py
