[tool.poetry]
name = "quri-vm"
version = "0.1.0"
description = ""
authors = ["QunaSys"]
readme = "README.md"
packages = [{ include = "quri_vm" }]

[tool.poetry.dependencies]
python = "<4,>=3.10"
quri-parts-circuit = ">=0.20.3"
quri-parts-qulacs = ">=0.20.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.3"

[tool.poetry.group.doc.dependencies]
Sphinx = ">=4.4,<8.0"
furo = ">=2022.2.23,<2024.0.0"
nbsphinx = ">=0.8.9,<0.10.0"
notebook = "^7.2.2"
myst-parser = ">=0.18.1,<2.1.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
